Update CMake and readme.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,19 +11,12 @@ SET(SSDPD_VERSION_MAJOR 1)
 SET(SSDPD_VERSION_MINOR 07)
 SET(SSDPD_VERSION_PATCH 0)
 
-# Keep two digits all the time
-SET(SSDPD_VERSION_MAJOR_NUM ${SSDPD_VERSION_MAJOR}0)
-SET(SSDPD_VERSION_MINOR_NUM ${SSDPD_VERSION_MINOR}0)
-SET(SSDPD_VERSION_PATCH_NUM ${SSDPD_VERSION_PATCH}0)
-
-IF(GIT_ID)
-	SET(GIT_VERSION 1)
-	SET(SSDPD_ID "${GIT_ID}")
-ENDIF()
-
-SET(PACKAGE_NAME		"ssdpd")
+SET(PACKAGE_NAME		"${PROJECT_NAME}")
 SET(PACKAGE_VERSION		"${SSDPD_VERSION_MAJOR}.${SSDPD_VERSION_MINOR}.${SSDPD_VERSION_PATCH}")
-SET(PACKAGE_MASTER_SITE_URL	"https://github.com/rozhuk-im/ssdpd")
+SET(PACKAGE_URL			"https://github.com/rozhuk-im/ssdpd")
+SET(PACKAGE_BUGREPORT		"https://github.com/rozhuk-im/ssdpd")
+SET(PACKAGE_STRING 		"${PACKAGE_NAME} ${PACKAGE_VERSION}")
+SET(PACKAGE_DESCRIPTION		"SSDP announce daemon for UPnP 1.1")
 SET(PACKAGE_TARNAME		"${PACKAGE_NAME}-${PACKAGE_VERSION}")
 
 ############################# OPTIONS SECTION ##########################
@@ -222,10 +215,14 @@ CHECK_INCLUDE_FILES(sys/time.h			HAVE_SYS_TIME_H)
 # Check platform API
 CHECK_FUNCTION_EXISTS(memset_s			HAVE_MEMSET_S)
 CHECK_FUNCTION_EXISTS(explicit_bzero		HAVE_EXPLICIT_BZERO)
+CHECK_FUNCTION_EXISTS(reallocarray		HAVE_REALLOCARRAY)
+CHECK_FUNCTION_EXISTS(pipe2			HAVE_PIPE2)
+CHECK_FUNCTION_EXISTS(accept4			HAVE_ACCEPT4)
 
 # Check macros
 CHECK_SYMBOL_EXISTS(PATH_MAX	limits.h	HAVE_PATH_MAX)
 CHECK_SYMBOL_EXISTS(MAXPATHLEN	sys/param.h	HAVE_MAXPATHLEN)
+CHECK_SYMBOL_EXISTS(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
 
 IF(NOT DESTDIR)
 	SET(DESTDIR $ENV{DESTDIR})
