--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,19 @@
 #
 
 ############################# INITIAL SECTION ##########################
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4 FATAL_ERROR)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+# Silently strip whitespace from target_link_libraries
+CMAKE_POLICY(SET CMP0004 OLD)
+
 
 PROJECT(ssdpd C)
 
-SET(SSDPD_VERSION_MAJOR 1)
-SET(SSDPD_VERSION_MINOR 07)
-SET(SSDPD_VERSION_PATCH 0)
+SET(PACKAGE_VERSION_MAJOR	1)
+SET(PACKAGE_VERSION_MINOR	07)
+SET(PACKAGE_VERSION_PATCH	0)
 
 SET(PACKAGE_NAME		"${PROJECT_NAME}")
-SET(PACKAGE_VERSION		"${SSDPD_VERSION_MAJOR}.${SSDPD_VERSION_MINOR}.${SSDPD_VERSION_PATCH}")
+SET(PACKAGE_VERSION		"${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_PATCH}")
 SET(PACKAGE_URL			"https://github.com/rozhuk-im/ssdpd")
 SET(PACKAGE_BUGREPORT		"https://github.com/rozhuk-im/ssdpd")
 SET(PACKAGE_STRING 		"${PACKAGE_NAME} ${PACKAGE_VERSION}")
@@ -21,9 +24,24 @@ SET(PACKAGE_TARNAME		"${PACKAGE_NAME}-${PACKAGE_VERSION}")
 
 ############################# OPTIONS SECTION ##########################
 
-IF(NOT LOCAL_CONFDIR)
-	SET(LOCAL_CONFDIR "${CONFDIR}")
-ENDIF(NOT LOCAL_CONFDIR)
+OPTION(ENABLE_OPTIMIZATION	"Enable extra optimizations [default: OFF]"		OFF)
+OPTION(ENABLE_COVERAGE		"Build with code coverage options [default: OFF]"	OFF)
+OPTION(ENABLE_FULL_DEBUG	"Build with all possible debug [default: OFF]"		OFF)
+OPTION(INSTALL_PHP_UPNP_SERVER	"Install PHP UPnP/DLNA server [default: ON]"		OFF)
+
+# Now CMAKE_INSTALL_PREFIX is a base prefix for everything.
+IF(NOT CONFDIR)
+	SET(CONFDIR "${CMAKE_INSTALL_PREFIX}/etc/ssdpd")
+ENDIF()
+
+IF(NOT RUNDIR)
+	SET(RUNDIR "/var/run")
+ENDIF()
+
+IF(NOT WWWDIR)
+	SET(WWWDIR "${CMAKE_INSTALL_PREFIX}/share/ssdpd/www")
+ENDIF()
+
 
 ############################# INCLUDE SECTION ##########################
 
@@ -37,29 +55,63 @@ INCLUDE(CheckCCompilerFlag)
 INCLUDE(CMakeParseArguments)
 
 FIND_PACKAGE(PkgConfig REQUIRED)
-SET(THREADS_PREFER_PTHREAD_FLAG ON)
-FIND_PACKAGE(Threads REQUIRED)
-LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
-############################# MACRO SECTION ############################
+FIND_LIBRARY(PTHREAD_LIBRARY pthread)
+LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${PTHREAD_LIBRARY})
 
+############################# MACRO SECTION ############################
+FUNCTION(INSTALL_IF_NOT_EXISTS src dest destname suffix)
+	IF(NOT IS_ABSOLUTE "${src}")
+		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	ENDIF()
+	IF(NOT IS_ABSOLUTE "${dest}")
+		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	ENDIF()
+	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
+	GET_FILENAME_COMPONENT(dest_name "${destname}" NAME)
+	IF(NOT EXISTS "${dest}/${dest_name}${suffix}")
+		SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${dest_name}${suffix}")
+		CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
+		INSTALL(FILES ${src_tmp} DESTINATION ${dest})
+	ENDIF()
+ENDFUNCTION()
+
+FUNCTION(INSTALL_SCRIPT src dest)
+	IF(NOT IS_ABSOLUTE "${src}")
+		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	ENDIF()
+	IF(NOT IS_ABSOLUTE "${dest}")
+		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	ENDIF()
+	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
+	SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
+	CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
+	INSTALL(PROGRAMS ${src_tmp} DESTINATION ${dest})
+ENDFUNCTION()
+
+FUNCTION(INSTALL_CONFIG src dest)
+	IF(NOT IS_ABSOLUTE "${src}")
+		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	ENDIF()
+	IF(NOT IS_ABSOLUTE "${dest}")
+		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	ENDIF()
+	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
+	SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
+	CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
+	INSTALL(FILES ${src_tmp} DESTINATION ${dest})
+ENDFUNCTION()
 
 ############################# CONFIG SECTION ###########################
-# Initial set
 
-# Prefer local include dirs to system ones
-INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/"
-		"${CMAKE_SOURCE_DIR}/src"
-		"${CMAKE_SOURCE_DIR}/src/liblcb/include"
+# Prefer local include dirs to system ones.
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/"
+		"${CMAKE_CURRENT_SOURCE_DIR}/src"
+		"${CMAKE_CURRENT_SOURCE_DIR}/src/liblcb/include"
 		"${CMAKE_BINARY_DIR}/src")
-
-IF(CMAKE_INSTALL_PREFIX)
-	SET(PREFIX 	${CMAKE_INSTALL_PREFIX})
-ENDIF(CMAKE_INSTALL_PREFIX)
-
 
 SET(TAR "tar")
 
-# Platform specific configuration
+# Platform specific configuration.
 IF(CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
 	ADD_DEFINITIONS(-DFREEBSD -D_BSD_SOURCE)
 	MESSAGE(STATUS "Configuring for BSD system")
@@ -71,21 +123,22 @@ IF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	MESSAGE(STATUS "Configuring for Darwin")
 	SET(TAR "gnutar")
 	SET(CMAKE_FIND_FRAMEWORK "NEVER")
-ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+ENDIF()
 
 
 IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE")
+	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE -D__USE_GNU=1")
 	ADD_DEFINITIONS(-D_GNU_SOURCE -DLINUX)
+	ADD_DEFINITIONS(-D__USE_GNU=1)
 	IF(BUILD_CPU_MODE STREQUAL "32")
 		ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE)
-	ENDIF(BUILD_CPU_MODE STREQUAL "32")
+	ENDIF()
 
 	LIST(APPEND CMAKE_REQUIRED_LIBRARIES rt)
-ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+ENDIF()
 
 
-# Process with warn flags
+# Process with warn flags.
 SET(CMAKE_C_WARN_FLAGS "")
 CHECK_C_COMPILER_FLAG(-Wall			SUPPORT_WALL)
 CHECK_C_COMPILER_FLAG(-W			SUPPORT_W)
@@ -98,43 +151,43 @@ CHECK_C_COMPILER_FLAG(-Wno-sign-compare		SUPPORT_WSIGN_COMPARE)
 CHECK_C_COMPILER_FLAG(-Wstrict-prototypes	SUPPORT_WSTRICT_PROTOTYPES)
 CHECK_C_COMPILER_FLAG(-pedantic			SUPPORT_PEDANTIC_FLAG)
 CHECK_C_COMPILER_FLAG(-Wno-unused-const-variable SUPPORT_WNO_UNUSED_CONST)
-# GCC 6 specific
+# GCC 6 specific.
 CHECK_C_COMPILER_FLAG(-Wnull-dereference	SUPPORT_WNULL_DEREFERENCE)
 CHECK_C_COMPILER_FLAG(-Wduplicated-cond		SUPPORT_WDUPLICATED_COND)
-# GCC 7 specific
+# GCC 7 specific.
 CHECK_C_COMPILER_FLAG(-Wimplicit-fallthrough	SUPPORT_WIMPLICIT_FALLTHROUGH)
 
 IF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
 	CHECK_C_COMPILER_FLAG("-std=c11"	SUPPORT_STD11_FLAG)
 	CHECK_C_COMPILER_FLAG("-std=c99"	SUPPORT_STD99_FLAG)
-ENDIF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
+ENDIF()
 IF(SUPPORT_W)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -W")
-ENDIF(SUPPORT_W)
+ENDIF()
 IF(SUPPORT_WALL)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wall")
-ENDIF(SUPPORT_WALL)
+ENDIF()
 IF(SUPPORT_WPOINTER)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wpointer-arith")
-ENDIF(SUPPORT_WPOINTER)
+ENDIF()
 IF(SUPPORT_WPARAM)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-parameter")
-ENDIF(SUPPORT_WPARAM)
+ENDIF()
 IF(SUPPORT_WFUNCTION)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-function")
-ENDIF(SUPPORT_WFUNCTION)
+ENDIF()
 IF(SUPPORT_WUNUSED_VAR)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wunused-variable")
-ENDIF(SUPPORT_WUNUSED_VAR)
+ENDIF()
 IF(SUPPORT_WPOINTER_SIGN)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-pointer-sign")
-ENDIF(SUPPORT_WPOINTER_SIGN)
+ENDIF()
 IF(SUPPORT_WSTRICT_PROTOTYPES)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wstrict-prototypes")
-ENDIF(SUPPORT_WSTRICT_PROTOTYPES)
+ENDIF()
 #IF(SUPPORT_PEDANTIC_FLAG)
 #	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
-#ENDIF(SUPPORT_PEDANTIC_FLAG)
+#ENDIF()
 IF(SUPPORT_WNULL_DEREFERENCE)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wnull-dereference")
 ENDIF()
@@ -152,99 +205,115 @@ IF(SUPPORT_WSIGN_COMPARE)
 ENDIF()
 IF(SUPPORT_STD11_FLAG)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c11")
-ELSE(SUPPORT_STD11_FLAG)
+ELSE()
 	IF(SUPPORT_STD99_FLAG)
 		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c99")
-	ENDIF(SUPPORT_STD99_FLAG)
-ENDIF(SUPPORT_STD11_FLAG)
+	ENDIF()
+ENDIF()
 IF(SUPPORT_WIMPLICIT_FALLTHROUGH)
 	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-implicit-fallthrough")
-ENDIF(SUPPORT_WIMPLICIT_FALLTHROUGH)
+ENDIF()
 
 CHECK_C_COMPILER_FLAG(-fPIC			SUPPORT_FPIC)
 IF(SUPPORT_FPIC)
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-ENDIF(SUPPORT_FPIC)
+ENDIF()
 
 # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
 	IF(ENABLE_OPTIMIZATION MATCHES "ON")
-	CHECK_C_COMPILER_FLAG(-flto SUPPORT_FLTO)
-	IF(SUPPORT_FLTO)
-		IF(NOT CMAKE_GCC_AR OR NOT CMAKE_GCC_RANLIB)
-			FIND_PROGRAM(CMAKE_GCC_AR NAMES "gcc-ar")
-			FIND_PROGRAM(CMAKE_GCC_RANLIB NAMES "gcc-ranlib")
-			MARK_AS_ADVANCED(CMAKE_GCC_AR CMAKE_GCC_RANLIB)
-		ENDIF()
-		IF(CMAKE_GCC_AR AND CMAKE_GCC_RANLIB)
-			SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing -flto")
-			SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
-			SET(CMAKE_C_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
-			SET(CMAKE_C_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
-			SET(CMAKE_C_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
-			SET(CMAKE_CXX_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
-			SET(CMAKE_CXX_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
-			SET(CMAKE_CXX_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
+		CHECK_C_COMPILER_FLAG(-flto SUPPORT_FLTO)
+		IF(SUPPORT_FLTO)
+			IF(NOT CMAKE_GCC_AR OR NOT CMAKE_GCC_RANLIB)
+				FIND_PROGRAM(CMAKE_GCC_AR NAMES "gcc-ar")
+				FIND_PROGRAM(CMAKE_GCC_RANLIB NAMES "gcc-ranlib")
+				MARK_AS_ADVANCED(CMAKE_GCC_AR CMAKE_GCC_RANLIB)
+			ENDIF()
+			IF(CMAKE_GCC_AR AND CMAKE_GCC_RANLIB)
+				SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing -flto")
+				SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
+				SET(CMAKE_C_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
+				SET(CMAKE_C_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
+				SET(CMAKE_C_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
+				SET(CMAKE_CXX_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
+				SET(CMAKE_CXX_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
+				SET(CMAKE_CXX_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
+			ENDIF()
+		ELSE()
+			SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing")
 		ENDIF()
 	ELSE()
-		SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing")
-	ENDIF()
-	ELSE(ENABLE_OPTIMIZATION MATCHES "ON")
 		IF(ENABLE_FULL_DEBUG MATCHES "ON")
 			SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
-		ELSE(ENABLE_FULL_DEBUG MATCHES "ON")
+		ELSE()
 			SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
-		ENDIF(ENABLE_FULL_DEBUG MATCHES "ON")
-	ENDIF(ENABLE_OPTIMIZATION MATCHES "ON")
-ENDIF(NOT CMAKE_C_OPT_FLAGS)
+		ENDIF()
+	ENDIF()
+ENDIF()
 
 IF(ENABLE_COVERAGE)
 	SET(CMAKE_C_OPT_FLAGS "-g -O0 -fno-strict-aliasing")
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
-ENDIF(ENABLE_COVERAGE)
+ENDIF()
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
 
-ADD_DEFINITIONS(-DHAVE_CONFIG_H)
-
-# Check platform specific includes
+# Check platform specific includes.
 CHECK_INCLUDE_FILES(sys/types.h			HAVE_SYS_TYPES_H)
 CHECK_INCLUDE_FILES(sys/time.h			HAVE_SYS_TIME_H)
 
-# Check platform API
+# Check platform API.
 CHECK_FUNCTION_EXISTS(memset_s			HAVE_MEMSET_S)
 CHECK_FUNCTION_EXISTS(explicit_bzero		HAVE_EXPLICIT_BZERO)
+CHECK_FUNCTION_EXISTS(memrchr			HAVE_MEMRCHR)
+CHECK_FUNCTION_EXISTS(memmem			HAVE_MEMMEM)
+CHECK_FUNCTION_EXISTS(strncasecmp		HAVE_STRNCASECMP)
 CHECK_FUNCTION_EXISTS(reallocarray		HAVE_REALLOCARRAY)
 CHECK_FUNCTION_EXISTS(pipe2			HAVE_PIPE2)
 CHECK_FUNCTION_EXISTS(accept4			HAVE_ACCEPT4)
 
-# Check macros
+# Check macros.
 CHECK_SYMBOL_EXISTS(PATH_MAX	limits.h	HAVE_PATH_MAX)
 CHECK_SYMBOL_EXISTS(MAXPATHLEN	sys/param.h	HAVE_MAXPATHLEN)
 CHECK_SYMBOL_EXISTS(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
 
 IF(NOT DESTDIR)
 	SET(DESTDIR $ENV{DESTDIR})
-ENDIF(NOT DESTDIR)
+ENDIF()
+
+CONFIGURE_FILE(config.h.cmake src/config.h)
+ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
 ################################ SUBDIRS SECTION #######################
-
-LIST(APPEND SSDPD_REQUIRED_LIBRARIES "${CMAKE_REQUIRED_LIBRARIES}")
 
 ADD_SUBDIRECTORY(src)
 
 ############################ TARGETS SECTION ###########################
 
-CONFIGURE_FILE(config.h.in src/config.h)
-ADD_DEFINITIONS("HAVE_CONFIG_H")
+ADD_CUSTOM_TARGET(dist ${CMAKE_CURRENT_SOURCE_DIR}/dist.sh
+	"${CMAKE_BINARY_DIR}/${PACKAGE_TARNAME}.tar.xz" "${TAR}"
+	COMMENT "Create source distribution"
+	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 ##################### INSTALLATION #####################################
 
-# Binaries
+# Configs
+INSTALL(CODE "FILE(MAKE_DIRECTORY ${CONFDIR})")
 
-ADD_CUSTOM_TARGET(dist ${CMAKE_SOURCE_DIR}/dist.sh
-	"${CMAKE_BINARY_DIR}/${PACKAGE_TARNAME}.tar.xz" "${TAR}"
-	COMMENT "Create source distribution"
-	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+INSTALL_IF_NOT_EXISTS(ssdpd.conf ${CONFDIR} "ssdpd.conf" ".sample")
+
+IF(CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
+	INSTALL_SCRIPT(freebsd/ssdpd "${CMAKE_INSTALL_PREFIX}/etc/rc.d/")
+ENDIF()
+
+# Install PHP UPnP/DLNA server
+IF(INSTALL_PHP_UPNP_SERVER)
+	INSTALL(DIRECTORY "www/upnp" DESTINATION ${WWWDIR})
+	INSTALL(DIRECTORY DESTINATION "${WWWDIR}/upnpdata")
+	INSTALL_CONFIG("nginx/nginx-upnp-full.conf" ${CONFDIR})
+	INSTALL_CONFIG("nginx/nginx-upnp-server.conf" ${CONFDIR})
+	INSTALL_CONFIG("nginx/nginx-upnp-handler.conf" ${CONFDIR})
+	INSTALL_CONFIG("php/php-upnp.conf" "${CMAKE_INSTALL_PREFIX}/etc/php-fpm.d/")
+ENDIF()
 
