--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 SET(SSDPD_BIN		ssdpd.c
 			liblcb/src/net/socket.c
 			liblcb/src/net/socket_address.c
@@ -8,14 +9,14 @@ SET(SSDPD_BIN		ssdpd.c
 			liblcb/src/threadpool/threadpool_msg_sys.c
 			liblcb/src/threadpool/threadpool_task.c
 			liblcb/src/utils/cmd_line_daemon.c
-			liblcb/src/utils/helpers.c
+			liblcb/src/utils/sys.c
+			liblcb/src/utils/buf_str.c
 			liblcb/src/utils/info.c
 			liblcb/src/utils/log.c
 			liblcb/src/utils/xml.c)
 
 ADD_EXECUTABLE(ssdpd ${SSDPD_BIN})
 SET_TARGET_PROPERTIES(ssdpd PROPERTIES LINKER_LANGUAGE C)
-TARGET_LINK_LIBRARIES(ssdpd ${SSDPD_REQUIRED_LIBRARIES})
+TARGET_LINK_LIBRARIES(ssdpd ${CMAKE_REQUIRED_LIBRARIES} ${CMAKE_EXE_LINKER_FLAGS})
 
 INSTALL(TARGETS ssdpd RUNTIME DESTINATION bin)
-
