Rename php-upnp.conf -> upnp-server.conf Add EXT http header to all control responses Remove X-Powered-By PHP http header from all responses Increase idle time limit and requests count limit for php-fcgi workers Fix files metadata request handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,6 +314,6 @@ IF(INSTALL_PHP_UPNP_SERVER)
 	INSTALL_CONFIG("nginx/nginx-upnp-full.conf" ${CONFDIR})
 	INSTALL_CONFIG("nginx/nginx-upnp-server.conf" ${CONFDIR})
 	INSTALL_CONFIG("nginx/nginx-upnp-handler.conf" ${CONFDIR})
-	INSTALL_CONFIG("php/php-upnp.conf" "${CMAKE_INSTALL_PREFIX}/etc/php-fpm.d/")
+	INSTALL_CONFIG("php/upnp-php-server.conf" "${CMAKE_INSTALL_PREFIX}/etc/php-fpm.d/")
 ENDIF()
 
