--- a/nginx/nginx-upnp-handler.conf
+++ b/nginx/nginx-upnp-handler.conf
@@ -57,7 +57,7 @@ location ^~ /upnp/control/ {
 
 	try_files 		$fastcgi_script_name = 404;
 	include			fastcgi_params;
-	fastcgi_pass		unix:@RUNDIR@/php-fcgi-upnp.sock;
+	fastcgi_pass		unix:@RUNDIR@/php-fcgi-upnp-server.sock;
 	fastcgi_connect_timeout 30s;
 	fastcgi_read_timeout	600s;
 	fastcgi_send_timeout	600s;
@@ -65,6 +65,8 @@ location ^~ /upnp/control/ {
 	#fastcgi_cache_valid	any 10s;
 	fastcgi_intercept_errors on;
 	fastcgi_param		SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+	add_header		EXT ' '; # REQUIRED for backwards compatibility with UPnP 1.0. (Header field name only; no field value.)
 }
 
 # Max cache for static files
