http: - return custom http "server" header - add comments
ContentDirectory:
- return "resolution" for images
- return "upnp:searchClass" for root metadata
- codestyle fix
- cleanup

Fix upnp_url_encode()

--- a/nginx/nginx-upnp-handler.conf
+++ b/nginx/nginx-upnp-handler.conf
@@ -1,6 +1,6 @@
 ### Rozhuk Ivan 2009.04 - 2017
 ### nginx configuration file
-###
+### PHP UPnP HTTP request handler
 
 
 # Files sharing and listing.
@@ -20,6 +20,10 @@ location ^~ /upnpdata/ {
 	autoindex		on;
 	autoindex_exact_size	on;
 	autoindex_localtime	on;
+
+	# Customize responce HTTP headers.
+	server_tokens		off;
+	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
 	add_header		TransferMode.DLNA.ORG 'Streaming';
 	#add_header		ContentFeatures.DLNA.ORG 'DLNA.ORG_OP=11';
 	# avi: add_header	ContentFeatures.DLNA.ORG 'DLNA.ORG_PN=MPEG_TS_SD_NA;DLNA.ORG_OP=00;DLNA.ORG_CI=0;DLNA.ORG_FLAGS=017000 00000000000000000000000000';
@@ -28,16 +32,23 @@ location ^~ /upnpdata/ {
 
 # UPnP SUBSCRIBE/UNSUBSCRIBE handle
 location ^~ /upnp/subscribe/ {
+	access_log		off;
+	server_tokens		off;
+
 	if ($request_method = SUBSCRIBE) {
-		access_log	off;
+		# Customize responce HTTP headers.
+		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
 		add_header	Pragma 'no-cache';
 		add_header	SID 'uuid:7CF21CB0-2266-47BE-A608-3CC1F5210BB4';
 		add_header	Timeout 'Second-1800';
+
 		return 200;
 	}
 	if ($request_method = UNSUBSCRIBE) {
-		access_log	off;
+		# Customize responce HTTP headers.
+		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
 		add_header	Pragma 'no-cache';
+
 		return 200;
 	}
 }
@@ -66,6 +77,9 @@ location ^~ /upnp/control/ {
 	fastcgi_intercept_errors on;
 	fastcgi_param		SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
+	# Customize responce HTTP headers.
+	server_tokens		off;
+	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
 	add_header		EXT ' '; # REQUIRED for backwards compatibility with UPnP 1.0. (Header field name only; no field value.)
 }
 
@@ -75,6 +89,7 @@ location ^~ /upnp/ {
 
 	access_log		off;
 
-	expires			3000d;
+	# Customize responce HTTP headers.
+	expires			30d;
 	add_header		Last-Modified $date_gmt;
 }
