nginx: add comment about DSO / dynamic modules load

--- a/nginx/nginx-upnp-full.conf
+++ b/nginx/nginx-upnp-full.conf
@@ -15,6 +15,11 @@ timer_resolution	100ms;
 pcre_jit		on;
 
 
+# If your nginx build with dynamic modules (DSO) then you need
+# uncomment this and set correct path.
+#load_module		/usr/local/libexec/nginx/ngx_http_headers_more_filter_module.so;
+
+
 events {
 	worker_connections 65535;
 	multi_accept on;
