--- a/nginx/nginx-upnp-handler.conf
+++ b/nginx/nginx-upnp-handler.conf
@@ -23,7 +23,7 @@ location ^~ /upnpdata/ {
 
 	# Customize responce HTTP headers.
 	server_tokens		off;
-	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
+	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-Media-server/@PACKAGE_VERSION@';
 	add_header		TransferMode.DLNA.ORG 'Streaming';
 	#add_header		ContentFeatures.DLNA.ORG 'DLNA.ORG_OP=11';
 	# avi: add_header	ContentFeatures.DLNA.ORG 'DLNA.ORG_PN=MPEG_TS_SD_NA;DLNA.ORG_OP=00;DLNA.ORG_CI=0;DLNA.ORG_FLAGS=017000 00000000000000000000000000';
@@ -37,7 +37,7 @@ location ^~ /upnp/subscribe/ {
 
 	if ($request_method = SUBSCRIBE) {
 		# Customize responce HTTP headers.
-		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
+		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-Media-server/@PACKAGE_VERSION@';
 		add_header	Pragma 'no-cache';
 		add_header	SID 'uuid:7CF21CB0-2266-47BE-A608-3CC1F5210BB4';
 		add_header	Timeout 'Second-1800';
@@ -46,7 +46,7 @@ location ^~ /upnp/subscribe/ {
 	}
 	if ($request_method = UNSUBSCRIBE) {
 		# Customize responce HTTP headers.
-		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
+		more_set_headers 'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-Media-server/@PACKAGE_VERSION@';
 		add_header	Pragma 'no-cache';
 
 		return 200;
@@ -79,7 +79,7 @@ location ^~ /upnp/control/ {
 
 	# Customize responce HTTP headers.
 	server_tokens		off;
-	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-UPnP-server/@PACKAGE_VERSION@';
+	more_set_headers	'Server: nginx/$nginx_version DLNADOC/1.50 UPnP/1.0 @PACKAGE_NAME@-PHP-Media-server/@PACKAGE_VERSION@';
 	add_header		EXT ' '; # REQUIRED for backwards compatibility with UPnP 1.0. (Header field name only; no field value.)
 }
 
