Optimize build process: less compiler checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,78 +140,81 @@ ENDIF()
 
 # Process with warn flags.
 SET(CMAKE_C_WARN_FLAGS "")
-CHECK_C_COMPILER_FLAG(-Wall			SUPPORT_WALL)
-CHECK_C_COMPILER_FLAG(-W			SUPPORT_W)
-CHECK_C_COMPILER_FLAG(-Wpointer-arith		SUPPORT_WPOINTER)
-CHECK_C_COMPILER_FLAG(-Wno-unused-parameter	SUPPORT_WPARAM)
-CHECK_C_COMPILER_FLAG(-Wno-unused-function	SUPPORT_WFUNCTION)
-CHECK_C_COMPILER_FLAG(-Wunused-variable		SUPPORT_WUNUSED_VAR)
-CHECK_C_COMPILER_FLAG(-Wno-pointer-sign		SUPPORT_WPOINTER_SIGN)
-CHECK_C_COMPILER_FLAG(-Wno-sign-compare		SUPPORT_WSIGN_COMPARE)
-CHECK_C_COMPILER_FLAG(-Wstrict-prototypes	SUPPORT_WSTRICT_PROTOTYPES)
-CHECK_C_COMPILER_FLAG(-pedantic			SUPPORT_PEDANTIC_FLAG)
-CHECK_C_COMPILER_FLAG(-Wno-unused-const-variable SUPPORT_WNO_UNUSED_CONST)
-# GCC 6 specific.
-CHECK_C_COMPILER_FLAG(-Wnull-dereference	SUPPORT_WNULL_DEREFERENCE)
-CHECK_C_COMPILER_FLAG(-Wduplicated-cond		SUPPORT_WDUPLICATED_COND)
-# GCC 7 specific.
-CHECK_C_COMPILER_FLAG(-Wimplicit-fallthrough	SUPPORT_WIMPLICIT_FALLTHROUGH)
+IF(NOT CMAKE_C_OPT_FLAGS AND ENABLE_FULL_DEBUG)
+	CHECK_C_COMPILER_FLAG(-W			SUPPORT_W)
+	CHECK_C_COMPILER_FLAG(-Wall			SUPPORT_WALL)
+	CHECK_C_COMPILER_FLAG(-Wpointer-arith		SUPPORT_WPOINTER)
+	CHECK_C_COMPILER_FLAG(-Wno-unused-parameter	SUPPORT_WPARAM)
+	CHECK_C_COMPILER_FLAG(-Wno-unused-function	SUPPORT_WFUNCTION)
+	CHECK_C_COMPILER_FLAG(-Wunused-variable		SUPPORT_WUNUSED_VAR)
+	CHECK_C_COMPILER_FLAG(-Wno-pointer-sign		SUPPORT_WPOINTER_SIGN)
+	CHECK_C_COMPILER_FLAG(-Wno-sign-compare		SUPPORT_WSIGN_COMPARE)
+	CHECK_C_COMPILER_FLAG(-Wstrict-prototypes	SUPPORT_WSTRICT_PROTOTYPES)
+	CHECK_C_COMPILER_FLAG(-pedantic			SUPPORT_PEDANTIC_FLAG)
+	CHECK_C_COMPILER_FLAG(-Wno-unused-const-variable SUPPORT_WNO_UNUSED_CONST)
+	# GCC 6 specific.
+	CHECK_C_COMPILER_FLAG(-Wnull-dereference	SUPPORT_WNULL_DEREFERENCE)
+	CHECK_C_COMPILER_FLAG(-Wduplicated-cond		SUPPORT_WDUPLICATED_COND)
+	# GCC 7 specific.
+	CHECK_C_COMPILER_FLAG(-Wimplicit-fallthrough	SUPPORT_WIMPLICIT_FALLTHROUGH)
+
+	IF(SUPPORT_W)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -W")
+	ENDIF()
+	IF(SUPPORT_WALL)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wall")
+	ENDIF()
+	IF(SUPPORT_WPOINTER)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wpointer-arith")
+	ENDIF()
+	IF(SUPPORT_WPARAM)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-parameter")
+	ENDIF()
+	IF(SUPPORT_WFUNCTION)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-function")
+	ENDIF()
+	IF(SUPPORT_WUNUSED_VAR)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wunused-variable")
+	ENDIF()
+	IF(SUPPORT_WPOINTER_SIGN)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-pointer-sign")
+	ENDIF()
+	IF(SUPPORT_WSTRICT_PROTOTYPES)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wstrict-prototypes")
+	ENDIF()
+	#IF(SUPPORT_PEDANTIC_FLAG)
+	#	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
+	#ENDIF()
+	IF(SUPPORT_WNULL_DEREFERENCE)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wnull-dereference")
+	ENDIF()
+	IF(SUPPORT_WDUPLICATED_COND)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wduplicated-cond")
+	ENDIF()
+	IF(SUPPORT_WLOGICAL_OP)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wlogical-op")
+	ENDIF()
+	IF(SUPPORT_WNO_UNUSED_CONST)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-const-variable")
+	ENDIF()
+	IF(SUPPORT_WSIGN_COMPARE)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-sign-compare")
+	ENDIF()
+	IF(SUPPORT_WIMPLICIT_FALLTHROUGH)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-implicit-fallthrough")
+	ENDIF()
+ENDIF()
 
 IF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
 	CHECK_C_COMPILER_FLAG("-std=c11"	SUPPORT_STD11_FLAG)
 	CHECK_C_COMPILER_FLAG("-std=c99"	SUPPORT_STD99_FLAG)
-ENDIF()
-IF(SUPPORT_W)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -W")
-ENDIF()
-IF(SUPPORT_WALL)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wall")
-ENDIF()
-IF(SUPPORT_WPOINTER)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wpointer-arith")
-ENDIF()
-IF(SUPPORT_WPARAM)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-parameter")
-ENDIF()
-IF(SUPPORT_WFUNCTION)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-function")
-ENDIF()
-IF(SUPPORT_WUNUSED_VAR)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wunused-variable")
-ENDIF()
-IF(SUPPORT_WPOINTER_SIGN)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-pointer-sign")
-ENDIF()
-IF(SUPPORT_WSTRICT_PROTOTYPES)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wstrict-prototypes")
-ENDIF()
-#IF(SUPPORT_PEDANTIC_FLAG)
-#	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
-#ENDIF()
-IF(SUPPORT_WNULL_DEREFERENCE)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wnull-dereference")
-ENDIF()
-IF(SUPPORT_WDUPLICATED_COND)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wduplicated-cond")
-ENDIF()
-IF(SUPPORT_WLOGICAL_OP)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wlogical-op")
-ENDIF()
-IF(SUPPORT_WNO_UNUSED_CONST)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-const-variable")
-ENDIF()
-IF(SUPPORT_WSIGN_COMPARE)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-sign-compare")
-ENDIF()
-IF(SUPPORT_STD11_FLAG)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c11")
-ELSE()
-	IF(SUPPORT_STD99_FLAG)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c99")
+	IF(SUPPORT_STD11_FLAG)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c11")
+	ELSE()
+		IF(SUPPORT_STD99_FLAG)
+			SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c99")
+		ENDIF()
 	ENDIF()
-ENDIF()
-IF(SUPPORT_WIMPLICIT_FALLTHROUGH)
-	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-implicit-fallthrough")
 ENDIF()
 
 CHECK_C_COMPILER_FLAG(-fPIC			SUPPORT_FPIC)
@@ -221,7 +224,7 @@ ENDIF()
 
 # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
-	IF(ENABLE_OPTIMIZATION MATCHES "ON")
+	IF(ENABLE_OPTIMIZATION)
 		CHECK_C_COMPILER_FLAG(-flto SUPPORT_FLTO)
 		IF(SUPPORT_FLTO)
 			IF(NOT CMAKE_GCC_AR OR NOT CMAKE_GCC_RANLIB)
@@ -243,7 +246,7 @@ IF(NOT CMAKE_C_OPT_FLAGS)
 			SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing")
 		ENDIF()
 	ELSE()
-		IF(ENABLE_FULL_DEBUG MATCHES "ON")
+		IF(ENABLE_FULL_DEBUG)
 			SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
 		ELSE()
 			SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
@@ -277,10 +280,6 @@ CHECK_FUNCTION_EXISTS(accept4			HAVE_ACCEPT4)
 CHECK_SYMBOL_EXISTS(PATH_MAX	limits.h	HAVE_PATH_MAX)
 CHECK_SYMBOL_EXISTS(MAXPATHLEN	sys/param.h	HAVE_MAXPATHLEN)
 CHECK_SYMBOL_EXISTS(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
-
-IF(NOT DESTDIR)
-	SET(DESTDIR $ENV{DESTDIR})
-ENDIF()
 
 CONFIGURE_FILE(config.h.cmake src/config.h)
 ADD_DEFINITIONS(-DHAVE_CONFIG_H)
