CMake: remove c99 check if c11 exist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,9 +182,9 @@ IF(NOT CMAKE_C_OPT_FLAGS AND ENABLE_FULL_DEBUG)
 	IF(SUPPORT_WSTRICT_PROTOTYPES)
 		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wstrict-prototypes")
 	ENDIF()
-	#IF(SUPPORT_PEDANTIC_FLAG)
-	#	SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
-	#ENDIF()
+	IF(SUPPORT_PEDANTIC_FLAG)
+		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
+	ENDIF()
 	IF(SUPPORT_WNULL_DEREFERENCE)
 		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wnull-dereference")
 	ENDIF()
@@ -207,10 +207,10 @@ ENDIF()
 
 IF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
 	CHECK_C_COMPILER_FLAG("-std=c11"	SUPPORT_STD11_FLAG)
-	CHECK_C_COMPILER_FLAG("-std=c99"	SUPPORT_STD99_FLAG)
 	IF(SUPPORT_STD11_FLAG)
 		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c11")
 	ELSE()
+		CHECK_C_COMPILER_FLAG("-std=c99"	SUPPORT_STD99_FLAG)
 		IF(SUPPORT_STD99_FLAG)
 			SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c99")
 		ENDIF()
