CMake cleanup, update liblcb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ SET(PACKAGE_TARNAME		"${PACKAGE_NAME}-${PACKAGE_VERSION}")
 
 ############################# OPTIONS SECTION ##########################
 
-OPTION(ENABLE_OPTIMIZATION	"Enable extra optimizations [default: OFF]"		OFF)
 OPTION(ENABLE_COVERAGE		"Build with code coverage options [default: OFF]"	OFF)
 OPTION(ENABLE_FULL_DEBUG	"Build with all possible debug [default: OFF]"		OFF)
 OPTION(INSTALL_PHP_MEDIA_SERVER	"Install PHP UPnP/DLNA Media server [default: ON]"	OFF)
@@ -45,14 +44,10 @@ ENDIF()
 
 ############################# INCLUDE SECTION ##########################
 
-INCLUDE(CheckIncludeFiles)
+#INCLUDE(CheckIncludeFiles)
 INCLUDE(CheckFunctionExists)
 INCLUDE(CheckSymbolExists)
-INCLUDE(CheckCSourceCompiles)
-INCLUDE(CheckCSourceRuns)
-INCLUDE(CheckLibraryExists)
 INCLUDE(CheckCCompilerFlag)
-INCLUDE(CMakeParseArguments)
 
 FIND_LIBRARY(PTHREAD_LIBRARY pthread)
 LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${PTHREAD_LIBRARY})
@@ -223,33 +218,10 @@ ENDIF()
 
 # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
-	IF(ENABLE_OPTIMIZATION)
-		CHECK_C_COMPILER_FLAG(-flto SUPPORT_FLTO)
-		IF(SUPPORT_FLTO)
-			IF(NOT CMAKE_GCC_AR OR NOT CMAKE_GCC_RANLIB)
-				FIND_PROGRAM(CMAKE_GCC_AR NAMES "gcc-ar")
-				FIND_PROGRAM(CMAKE_GCC_RANLIB NAMES "gcc-ranlib")
-				MARK_AS_ADVANCED(CMAKE_GCC_AR CMAKE_GCC_RANLIB)
-			ENDIF()
-			IF(CMAKE_GCC_AR AND CMAKE_GCC_RANLIB)
-				SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing -flto")
-				SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
-				SET(CMAKE_C_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
-				SET(CMAKE_C_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
-				SET(CMAKE_C_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
-				SET(CMAKE_CXX_ARCHIVE_CREATE "${CMAKE_GCC_AR} cr <TARGET> <LINK_FLAGS> <OBJECTS>")
-				SET(CMAKE_CXX_ARCHIVE_APPEND "${CMAKE_GCC_AR} r <TARGET> <LINK_FLAGS> <OBJECTS>")
-				SET(CMAKE_CXX_ARCHIVE_FINISH "${CMAKE_GCC_RANLIB} <TARGET>")
-			ENDIF()
-		ELSE()
-			SET(CMAKE_C_OPT_FLAGS "-g -O3 -fstrict-aliasing")
-		ENDIF()
+	IF(ENABLE_FULL_DEBUG)
+		SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
 	ELSE()
-		IF(ENABLE_FULL_DEBUG)
-			SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
-		ELSE()
-			SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
-		ENDIF()
+		SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
 	ENDIF()
 ENDIF()
 
@@ -262,8 +234,7 @@ ENDIF()
 SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
 
 # Check platform specific includes.
-CHECK_INCLUDE_FILES(sys/types.h			HAVE_SYS_TYPES_H)
-CHECK_INCLUDE_FILES(sys/time.h			HAVE_SYS_TIME_H)
+#CHECK_INCLUDE_FILES(sys/types.h		HAVE_SYS_TYPES_H)
 
 # Check platform API.
 CHECK_FUNCTION_EXISTS(memset_s			HAVE_MEMSET_S)
@@ -276,8 +247,6 @@ CHECK_FUNCTION_EXISTS(pipe2			HAVE_PIPE2)
 CHECK_FUNCTION_EXISTS(accept4			HAVE_ACCEPT4)
 
 # Check macros.
-CHECK_SYMBOL_EXISTS(PATH_MAX	limits.h	HAVE_PATH_MAX)
-CHECK_SYMBOL_EXISTS(MAXPATHLEN	sys/param.h	HAVE_MAXPATHLEN)
 CHECK_SYMBOL_EXISTS(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
 
 CONFIGURE_FILE(config.h.cmake src/config.h)
