CMake update - compact flags chesk code - add hardening flags - remove policy CMP0004: use strip for strings after config done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,6 @@
 
 ############################# INITIAL SECTION ##########################
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
-# Silently strip whitespace from target_link_libraries
-CMAKE_POLICY(SET CMP0004 OLD)
-
 
 PROJECT(ssdpd C)
 
@@ -53,6 +50,26 @@ FIND_LIBRARY(PTHREAD_LIBRARY pthread)
 LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${PTHREAD_LIBRARY})
 
 ############################# MACRO SECTION ############################
+MACRO(TRY_C_FLAG PROP FLAG)
+	# Try flag once on the C compiler
+	CHECK_C_COMPILER_FLAG(${FLAG} C_FLAG_${PROP})
+	IF(C_FLAG_${PROP})
+		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAG}")
+	ENDIF()
+ENDMACRO()
+
+MACRO(TRY_LINKER_FLAG PROP FLAG)
+	# Check with the C compiler
+	SET(CMAKE_REQUIRED_FLAGS ${FLAG})
+	CHECK_C_COMPILER_FLAG(${FLAG} LINKER_FLAG_${PROP})
+	SET(CMAKE_REQUIRED_FLAGS "")
+	IF(LINKER_FLAG_${PROP})
+		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${FLAG}")
+		SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${FLAG}")
+		SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${FLAG}")
+	ENDIF()
+ENDMACRO()
+
 FUNCTION(INSTALL_IF_NOT_EXISTS src dest destname suffix)
 	IF(NOT IS_ABSOLUTE "${src}")
 		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
@@ -107,23 +124,21 @@ SET(TAR "tar")
 
 # Platform specific configuration.
 IF(CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
-	ADD_DEFINITIONS(-DFREEBSD -D_BSD_SOURCE)
+	ADD_DEFINITIONS(-D_BSD_SOURCE -DFREEBSD)
+	INCLUDE_DIRECTORIES("/usr/local/include/")
 	MESSAGE(STATUS "Configuring for BSD system")
 	SET(TAR "gtar")
 ENDIF()
 
 IF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_BSD_SOURCE -DDARWIN")
+	ADD_DEFINITIONS(-D_BSD_SOURCE -DDARWIN)
 	MESSAGE(STATUS "Configuring for Darwin")
 	SET(TAR "gnutar")
-	SET(CMAKE_FIND_FRAMEWORK "NEVER")
 ENDIF()
 
 
 IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE -D__USE_GNU=1")
-	ADD_DEFINITIONS(-D_GNU_SOURCE -DLINUX)
-	ADD_DEFINITIONS(-D__USE_GNU=1)
+	ADD_DEFINITIONS(-D_GNU_SOURCE -DLINUX -D__USE_GNU=1)
 	IF(BUILD_CPU_MODE STREQUAL "32")
 		ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE)
 	ENDIF()
@@ -133,105 +148,66 @@ ENDIF()
 
 
 # Process with warn flags.
-SET(CMAKE_C_WARN_FLAGS "")
 IF(NOT CMAKE_C_OPT_FLAGS AND ENABLE_FULL_DEBUG)
-	CHECK_C_COMPILER_FLAG(-W			SUPPORT_W)
-	CHECK_C_COMPILER_FLAG(-Wall			SUPPORT_WALL)
-	CHECK_C_COMPILER_FLAG(-Wpointer-arith		SUPPORT_WPOINTER)
-	CHECK_C_COMPILER_FLAG(-Wno-unused-parameter	SUPPORT_WPARAM)
-	CHECK_C_COMPILER_FLAG(-Wno-unused-function	SUPPORT_WFUNCTION)
-	CHECK_C_COMPILER_FLAG(-Wunused-variable		SUPPORT_WUNUSED_VAR)
-	CHECK_C_COMPILER_FLAG(-Wno-pointer-sign		SUPPORT_WPOINTER_SIGN)
-	CHECK_C_COMPILER_FLAG(-Wno-sign-compare		SUPPORT_WSIGN_COMPARE)
-	CHECK_C_COMPILER_FLAG(-Wstrict-prototypes	SUPPORT_WSTRICT_PROTOTYPES)
-	CHECK_C_COMPILER_FLAG(-pedantic			SUPPORT_PEDANTIC_FLAG)
-	CHECK_C_COMPILER_FLAG(-Wno-unused-const-variable SUPPORT_WNO_UNUSED_CONST)
-	# GCC 6 specific.
-	CHECK_C_COMPILER_FLAG(-Wnull-dereference	SUPPORT_WNULL_DEREFERENCE)
-	CHECK_C_COMPILER_FLAG(-Wduplicated-cond		SUPPORT_WDUPLICATED_COND)
-	# GCC 7 specific.
-	CHECK_C_COMPILER_FLAG(-Wimplicit-fallthrough	SUPPORT_WIMPLICIT_FALLTHROUGH)
-
-	IF(SUPPORT_W)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -W")
-	ENDIF()
-	IF(SUPPORT_WALL)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wall")
-	ENDIF()
-	IF(SUPPORT_WPOINTER)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wpointer-arith")
-	ENDIF()
-	IF(SUPPORT_WPARAM)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-parameter")
-	ENDIF()
-	IF(SUPPORT_WFUNCTION)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-function")
-	ENDIF()
-	IF(SUPPORT_WUNUSED_VAR)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wunused-variable")
-	ENDIF()
-	IF(SUPPORT_WPOINTER_SIGN)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-pointer-sign")
-	ENDIF()
-	IF(SUPPORT_WSTRICT_PROTOTYPES)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wstrict-prototypes")
-	ENDIF()
-	IF(SUPPORT_PEDANTIC_FLAG)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -pedantic")
-	ENDIF()
-	IF(SUPPORT_WNULL_DEREFERENCE)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wnull-dereference")
-	ENDIF()
-	IF(SUPPORT_WDUPLICATED_COND)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wduplicated-cond")
-	ENDIF()
-	IF(SUPPORT_WLOGICAL_OP)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wlogical-op")
-	ENDIF()
-	IF(SUPPORT_WNO_UNUSED_CONST)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-unused-const-variable")
-	ENDIF()
-	IF(SUPPORT_WSIGN_COMPARE)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-sign-compare")
-	ENDIF()
-	IF(SUPPORT_WIMPLICIT_FALLTHROUGH)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -Wno-implicit-fallthrough")
-	ENDIF()
+	TRY_C_FLAG(W "-W")
+	TRY_C_FLAG(WALL "-Wall")
+	TRY_C_FLAG(WPOINTER "-Wpointer-arith")
+	TRY_C_FLAG(WPARAM "-Wno-unused-parameter")
+	TRY_C_FLAG(WFUNCTION "-Wno-unused-function")
+	TRY_C_FLAG(WUNUSED_VAR "-Wno-unused-variable")
+	TRY_C_FLAG(WPOINTER_SIGN "-Wno-pointer-sign")
+	TRY_C_FLAG(WSIGN_COMPARE "-Wno-sign-compare")
+	TRY_C_FLAG(WSTRICT_PROTOTYPES "-Wstrict-prototypes")
+	TRY_C_FLAG(PEDANTIC "-pedantic")
+	TRY_C_FLAG(WNO_UNUSED_CONST "-Wno-unused-const-variable")
+	TRY_C_FLAG(WNULL_DEREFERENCE "-Wnull-dereference")
+	TRY_C_FLAG(WDUPLICATED_COND "-Wduplicated-cond")
+	TRY_C_FLAG(WIMPLICIT_FALLTHROUGH "-Wimplicit-fallthrough")
 ENDIF()
 
 IF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
-	CHECK_C_COMPILER_FLAG("-std=c11"	SUPPORT_STD11_FLAG)
-	IF(SUPPORT_STD11_FLAG)
-		SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c11")
-	ELSE()
-		CHECK_C_COMPILER_FLAG("-std=c99"	SUPPORT_STD99_FLAG)
-		IF(SUPPORT_STD99_FLAG)
-			SET(CMAKE_C_WARN_FLAGS "${CMAKE_C_WARN_FLAGS} -std=c99")
-		ENDIF()
+	TRY_C_FLAG(STD11 "-std=c11")
+	IF(NOT C_FLAG_STD11)
+		TRY_C_FLAG(STD99 "-std=c99")
 	ENDIF()
 ENDIF()
 
-CHECK_C_COMPILER_FLAG(-fPIC			SUPPORT_FPIC)
-IF(SUPPORT_FPIC)
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-ENDIF()
+
+# Hardening flags
+TRY_C_FLAG(FORTIFY_SOURCE2 "-D_FORTIFY_SOURCE=2")
+TRY_C_FLAG(FSTACK_PROTECTOR_ALL "-fstack-protector-all")
+TRY_C_FLAG(FSANITIZE_SAFE_STACK "-fsanitize=safe-stack")
+TRY_C_FLAG(FSANITIZE_CFI "-fsanitize=cfi")
+TRY_C_FLAG(MRETPOLINE "-mretpoline")
+TRY_C_FLAG(FWRAPV "-fwrapv")
+TRY_C_FLAG(FPIE "-fPIE")
+TRY_LINKER_FLAG(PIE "-pie")
+TRY_LINKER_FLAG(ZNOW "-Wl,-z,now")
+
 
 # Optimization flags
-IF(NOT CMAKE_C_OPT_FLAGS)
-	IF(ENABLE_FULL_DEBUG)
-		SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
-	ELSE()
-		SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
-	ENDIF()
-ENDIF()
-
 IF(ENABLE_COVERAGE)
 	SET(CMAKE_C_OPT_FLAGS "-g -O0 -fno-strict-aliasing")
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+ELSE()
+	IF(NOT CMAKE_C_OPT_FLAGS)
+		IF(ENABLE_FULL_DEBUG)
+			SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
+		ELSE()
+			SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
+		ENDIF()
+	ENDIF()
 ENDIF()
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
+
+SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS}")
+# Silently strip whitespace
+STRING(STRIP "${CMAKE_C_FLAGS}" CMAKE_C_FLAGS)
+STRING(STRIP "${CMAKE_EXE_LINKER_FLAGS}" CMAKE_EXE_LINKER_FLAGS)
+STRING(STRIP "${CMAKE_MODULE_LINKER_FLAGS}" CMAKE_MODULE_LINKER_FLAGS)
+STRING(STRIP "${CMAKE_SHARED_LINKER_FLAGS}" CMAKE_SHARED_LINKER_FLAGS)
+
 
 # Check platform specific includes.
 #CHECK_INCLUDE_FILES(sys/types.h		HAVE_SYS_TYPES_H)
