CMake code style changed

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-SET(SSDPD_BIN		ssdpd.c
+set(SSDPD_BIN		ssdpd.c
 			liblcb/src/net/socket.c
 			liblcb/src/net/socket_address.c
 			liblcb/src/net/utils.c
@@ -15,8 +15,8 @@ SET(SSDPD_BIN		ssdpd.c
 			liblcb/src/utils/log.c
 			liblcb/src/utils/xml.c)
 
-ADD_EXECUTABLE(ssdpd ${SSDPD_BIN})
-SET_TARGET_PROPERTIES(ssdpd PROPERTIES LINKER_LANGUAGE C)
-TARGET_LINK_LIBRARIES(ssdpd ${CMAKE_REQUIRED_LIBRARIES} ${CMAKE_EXE_LINKER_FLAGS})
+add_executable(ssdpd ${SSDPD_BIN})
+set_target_properties(ssdpd PROPERTIES LINKER_LANGUAGE C)
+target_link_libraries(ssdpd ${CMAKE_REQUIRED_LIBRARIES} ${CMAKE_EXE_LINKER_FLAGS})
 
-INSTALL(TARGETS ssdpd RUNTIME DESTINATION bin)
+install(TARGETS ssdpd RUNTIME DESTINATION bin)
