--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,245 +3,246 @@
 #
 
 ############################# INITIAL SECTION ##########################
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
-PROJECT(ssdpd C)
+project(ssdpd C)
 
-SET(PACKAGE_VERSION_MAJOR	1)
-SET(PACKAGE_VERSION_MINOR	07)
-SET(PACKAGE_VERSION_PATCH	0)
+set(PACKAGE_VERSION_MAJOR	1)
+set(PACKAGE_VERSION_MINOR	07)
+set(PACKAGE_VERSION_PATCH	0)
 
-SET(PACKAGE_NAME		"${PROJECT_NAME}")
-SET(PACKAGE_VERSION		"${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_PATCH}")
-SET(PACKAGE_URL			"https://github.com/rozhuk-im/ssdpd")
-SET(PACKAGE_BUGREPORT		"https://github.com/rozhuk-im/ssdpd")
-SET(PACKAGE_STRING 		"${PACKAGE_NAME} ${PACKAGE_VERSION}")
-SET(PACKAGE_DESCRIPTION		"SSDP announce daemon for UPnP 1.1")
-SET(PACKAGE_TARNAME		"${PACKAGE_NAME}-${PACKAGE_VERSION}")
+set(PACKAGE_NAME		"${PROJECT_NAME}")
+set(PACKAGE_VERSION		"${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_PATCH}")
+set(PACKAGE_URL			"https://github.com/rozhuk-im/ssdpd")
+set(PACKAGE_BUGREPORT		"https://github.com/rozhuk-im/ssdpd")
+set(PACKAGE_STRING 		"${PACKAGE_NAME} ${PACKAGE_VERSION}")
+set(PACKAGE_DESCRIPTION		"SSDP announce daemon for UPnP 1.1")
+set(PACKAGE_TARNAME		"${PACKAGE_NAME}-${PACKAGE_VERSION}")
 
 ############################# OPTIONS SECTION ##########################
 
-OPTION(ENABLE_COVERAGE		"Build with code coverage options [default: OFF]"	OFF)
-OPTION(ENABLE_FULL_DEBUG	"Build with all possible debug [default: OFF]"		OFF)
-OPTION(INSTALL_PHP_MEDIA_SERVER	"Install PHP UPnP/DLNA Media server [default: ON]"	OFF)
+option(ENABLE_COVERAGE		"Build with code coverage options [default: OFF]"	OFF)
+option(ENABLE_FULL_DEBUG	"Build with all possible debug [default: OFF]"		OFF)
+option(INSTALL_PHP_MEDIA_SERVER	"Install PHP UPnP/DLNA Media server [default: ON]"	OFF)
 
 # Now CMAKE_INSTALL_PREFIX is a base prefix for everything.
-IF(NOT CONFDIR)
-	SET(CONFDIR "${CMAKE_INSTALL_PREFIX}/etc/ssdpd")
-ENDIF()
+if (NOT CONFDIR)
+	set(CONFDIR "${CMAKE_INSTALL_PREFIX}/etc/ssdpd")
+endif()
 
-IF(NOT RUNDIR)
-	SET(RUNDIR "/var/run")
-ENDIF()
+if (NOT RUNDIR)
+	set(RUNDIR "/var/run")
+endif()
 
-IF(NOT WWWDIR)
-	SET(WWWDIR "${CMAKE_INSTALL_PREFIX}/share/ssdpd/www")
-ENDIF()
+if (NOT WWWDIR)
+	set(WWWDIR "${CMAKE_INSTALL_PREFIX}/share/ssdpd/www")
+endif()
 
 
 ############################# INCLUDE SECTION ##########################
 
-#INCLUDE(CheckIncludeFiles)
-INCLUDE(CheckFunctionExists)
-INCLUDE(CheckSymbolExists)
-INCLUDE(CheckCCompilerFlag)
+#include(CheckIncludeFiles)
+include(CheckFunctionExists)
+include(CheckSymbolExists)
+include(CheckCCompilerFlag)
 
-FIND_LIBRARY(PTHREAD_LIBRARY pthread)
-LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${PTHREAD_LIBRARY})
+find_library(PTHREAD_LIBRARY pthread)
+list(APPEND CMAKE_REQUIRED_LIBRARIES ${PTHREAD_LIBRARY})
 
 ############################# MACRO SECTION ############################
-MACRO(TRY_C_FLAG PROP FLAG)
+macro(try_c_flag prop flag)
 	# Try flag once on the C compiler
-	CHECK_C_COMPILER_FLAG("-Werror ${FLAG}" C_FLAG_${PROP})
-	IF(C_FLAG_${PROP})
-		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAG}")
-	ENDIF()
-ENDMACRO()
+	check_c_compiler_flag("-Werror ${flag}" C_FLAG_${prop})
+	if (C_FLAG_${prop})
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${flag}")
+	endif()
+endmacro()
 
-MACRO(TRY_LINKER_FLAG PROP FLAG)
+macro(try_linker_flag prop flag)
 	# Check with the C compiler
-	SET(CMAKE_REQUIRED_FLAGS ${FLAG})
-	CHECK_C_COMPILER_FLAG(${FLAG} LINKER_FLAG_${PROP})
-	SET(CMAKE_REQUIRED_FLAGS "")
-	IF(LINKER_FLAG_${PROP})
-		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${FLAG}")
-		SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${FLAG}")
-		SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${FLAG}")
-	ENDIF()
-ENDMACRO()
+	set(CMAKE_REQUIRED_FLAGS ${flag})
+	check_c_compiler_flag(${flag} LINKER_FLAG_${prop})
+	set(CMAKE_REQUIRED_FLAGS "")
+	if (LINKER_FLAG_${prop})
+		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${flag}")
+		set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${flag}")
+		set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${flag}")
+	endif()
+endmacro()
 
-FUNCTION(INSTALL_IF_NOT_EXISTS src dest destname suffix)
-	IF(NOT IS_ABSOLUTE "${src}")
-		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
-	ENDIF()
-	IF(NOT IS_ABSOLUTE "${dest}")
-		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
-	ENDIF()
-	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
-	GET_FILENAME_COMPONENT(dest_name "${destname}" NAME)
-	IF(NOT EXISTS "${dest}/${dest_name}${suffix}")
-		SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${dest_name}${suffix}")
-		CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
-		INSTALL(FILES ${src_tmp} DESTINATION ${dest})
-	ENDIF()
-ENDFUNCTION()
+function(install_if_not_exists src dest destname suffix)
+	if (NOT IS_ABSOLUTE "${src}")
+		set(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	endif()
+	if (NOT IS_ABSOLUTE "${dest}")
+		set(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	endif()
+	get_filename_component(src_name "${src}" NAME)
+	get_filename_component(dest_name "${destname}" NAME)
+	if (NOT EXISTS "${dest}/${dest_name}${suffix}")
+		set(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${dest_name}${suffix}")
+		configure_file(${src} ${src_tmp} @ONLY)
+		install(FILES ${src_tmp} DESTINATION ${dest})
+	endif()
+endfunction()
 
-FUNCTION(INSTALL_SCRIPT src dest)
-	IF(NOT IS_ABSOLUTE "${src}")
-		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
-	ENDIF()
-	IF(NOT IS_ABSOLUTE "${dest}")
-		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
-	ENDIF()
-	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
-	SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
-	CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
-	INSTALL(PROGRAMS ${src_tmp} DESTINATION ${dest})
-ENDFUNCTION()
+function(install_script src dest)
+	if (NOT IS_ABSOLUTE "${src}")
+		set(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	endif()
+	if (NOT IS_ABSOLUTE "${dest}")
+		set(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	endif()
+	get_filename_component(src_name "${src}" NAME)
+	set(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
+	configure_file(${src} ${src_tmp} @ONLY)
+	install(PROGRAMS ${src_tmp} DESTINATION ${dest})
+endfunction()
 
-FUNCTION(INSTALL_CONFIG src dest)
-	IF(NOT IS_ABSOLUTE "${src}")
-		SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
-	ENDIF()
-	IF(NOT IS_ABSOLUTE "${dest}")
-		SET(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
-	ENDIF()
-	GET_FILENAME_COMPONENT(src_name "${src}" NAME)
-	SET(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
-	CONFIGURE_FILE(${src} ${src_tmp} @ONLY)
-	INSTALL(FILES ${src_tmp} DESTINATION ${dest})
-ENDFUNCTION()
+function(install_config src dest)
+	if (NOT IS_ABSOLUTE "${src}")
+		set(src "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
+	endif()
+	if (NOT IS_ABSOLUTE "${dest}")
+		set(dest "${CMAKE_INSTALL_PREFIX}/${dest}")
+	endif()
+	get_filename_component(src_name "${src}" NAME)
+	set(src_tmp "${CMAKE_CURRENT_BINARY_DIR}/${src_name}")
+	configure_file(${src} ${src_tmp} @ONLY)
+	install(FILES ${src_tmp} DESTINATION ${dest})
+endfunction()
 
 ############################# CONFIG SECTION ###########################
 
 # Prefer local include dirs to system ones.
-INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/"
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/"
 		"${CMAKE_CURRENT_SOURCE_DIR}/src"
 		"${CMAKE_CURRENT_SOURCE_DIR}/src/liblcb/include"
 		"${CMAKE_BINARY_DIR}/src")
 
-SET(TAR "tar")
+set(TAR "tar")
 
 # Platform specific configuration.
-IF(CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
-	ADD_DEFINITIONS(-D_BSD_SOURCE -DFREEBSD)
-	INCLUDE_DIRECTORIES("/usr/local/include/")
-	MESSAGE(STATUS "Configuring for BSD system")
-	SET(TAR "gtar")
-ENDIF()
+if (CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
+	add_definitions(-D_BSD_SOURCE -DFREEBSD)
+	message(STATUS "Configuring for BSD system")
+	include_directories("/usr/local/include/")
+	set(TAR "gtar")
+endif()
 
-IF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	ADD_DEFINITIONS(-D_BSD_SOURCE -DDARWIN)
-	MESSAGE(STATUS "Configuring for Darwin")
-	SET(TAR "gnutar")
-ENDIF()
-
-
-IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	ADD_DEFINITIONS(-D_GNU_SOURCE -DLINUX -D__USE_GNU=1)
-	IF(BUILD_CPU_MODE STREQUAL "32")
-		ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE)
-	ENDIF()
-
-	LIST(APPEND CMAKE_REQUIRED_LIBRARIES rt)
-ENDIF()
+if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+	add_definitions(-D_BSD_SOURCE -DDARWIN)
+	message(STATUS "Configuring for Darwin")
+	set(TAR "gnutar")
+endif()
 
 
-TRY_C_FLAG(PIPE "-pipe")
+if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	add_definitions(-D_GNU_SOURCE -DLINUX -D__USE_GNU=1)
+	message(STATUS "Configuring for Linux")
+	if (BUILD_CPU_MODE STREQUAL "32")
+		add_definitions(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE)
+	endif()
+
+	list(APPEND CMAKE_REQUIRED_LIBRARIES rt)
+endif()
+
+
+try_c_flag(PIPE "-pipe")
 
 # Process with warn flags.
-IF(NOT CMAKE_C_OPT_FLAGS AND ENABLE_FULL_DEBUG)
-	TRY_C_FLAG(W "-W")
-	TRY_C_FLAG(WALL "-Wall")
-	TRY_C_FLAG(WPOINTER "-Wpointer-arith")
-	TRY_C_FLAG(WPARAM "-Wno-unused-parameter")
-	TRY_C_FLAG(WFUNCTION "-Wno-unused-function")
-	TRY_C_FLAG(WUNUSED_VAR "-Wno-unused-variable")
-	TRY_C_FLAG(WPOINTER_SIGN "-Wno-pointer-sign")
-	TRY_C_FLAG(WSIGN_COMPARE "-Wno-sign-compare")
-	TRY_C_FLAG(WSTRICT_PROTOTYPES "-Wstrict-prototypes")
-	TRY_C_FLAG(PEDANTIC "-pedantic")
-	TRY_C_FLAG(WNO_UNUSED_CONST "-Wno-unused-const-variable")
-	TRY_C_FLAG(WNULL_DEREFERENCE "-Wnull-dereference")
-	TRY_C_FLAG(WDUPLICATED_COND "-Wduplicated-cond")
-	TRY_C_FLAG(WIMPLICIT_FALLTHROUGH "-Wimplicit-fallthrough")
-ENDIF()
+if (NOT CMAKE_C_OPT_FLAGS AND ENABLE_FULL_DEBUG)
+	try_c_flag(W			"-W")
+	try_c_flag(WALL			"-Wall")
+	try_c_flag(WPOINTER		"-Wpointer-arith")
+	try_c_flag(WPARAM		"-Wno-unused-parameter")
+	try_c_flag(WFUNCTION		"-Wno-unused-function")
+	try_c_flag(WUNUSED_VAR		"-Wno-unused-variable")
+	try_c_flag(WPOINTER_SIGN	"-Wno-pointer-sign")
+	try_c_flag(WSIGN_COMPARE	"-Wno-sign-compare")
+	try_c_flag(WSTRICT_PROTOTYPES	"-Wstrict-prototypes")
+	try_c_flag(PEDANTIC		"-pedantic")
+	try_c_flag(WNO_UNUSED_CONST	"-Wno-unused-const-variable")
+	try_c_flag(WNULL_DEREFERENCE	"-Wnull-dereference")
+	try_c_flag(WDUPLICATED_COND	"-Wduplicated-cond")
+	try_c_flag(WIMPLICIT_FALLTHROUGH "-Wimplicit-fallthrough")
+endif()
 
-IF(NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
-	TRY_C_FLAG(STD11 "-std=c11")
-	IF(NOT C_FLAG_STD11)
-		TRY_C_FLAG(STD99 "-std=c99")
-	ENDIF()
-ENDIF()
+if (NOT "${CMAKE_C_COMPILER_ID}" MATCHES SunPro)
+	try_c_flag(STD11		"-std=c11")
+	if (NOT C_FLAG_STD11)
+		try_c_flag(STD99	"-std=c99")
+	endif()
+endif()
 
 
 # Hardening flags
-TRY_C_FLAG(FORTIFY_SOURCE2 "-D_FORTIFY_SOURCE=2")
-TRY_C_FLAG(FSTACK_PROTECTOR_ALL "-fstack-protector-all")
-TRY_C_FLAG(FSANITIZE_SAFE_STACK "-fsanitize=safe-stack")
-TRY_C_FLAG(FSANITIZE_CFI "-fsanitize=cfi")
-TRY_C_FLAG(MRETPOLINE "-mretpoline")
-TRY_C_FLAG(MFUNCTION_RETURN "-mfunction-return=thunk")
-TRY_C_FLAG(MINDIRECT_BRANCH "-mindirect-branch=thunk")
-TRY_C_FLAG(FWRAPV "-fwrapv")
-TRY_C_FLAG(FPIE "-fPIE")
-TRY_LINKER_FLAG(PIE "-pie")
-TRY_LINKER_FLAG(RETPOLINEPLT "-Wl,-z,retpolineplt")
-TRY_LINKER_FLAG(ZRELRO "-Wl,-z,relro")
-TRY_LINKER_FLAG(ZNOW "-Wl,-z,now")
-TRY_LINKER_FLAG(ZNOEXECSTACK "-Wl,-z,noexecstack")
+try_c_flag(FORTIFY_SOURCE2		"-D_FORTIFY_SOURCE=2")
+try_c_flag(FSTACK_PROTECTOR_ALL		"-fstack-protector-all")
+try_c_flag(FSANITIZE_SAFE_STACK		"-fsanitize=safe-stack")
+try_c_flag(FSANITIZE_CFI		"-fsanitize=cfi")
+try_c_flag(MRETPOLINE			"-mretpoline")
+try_c_flag(MFUNCTION_RETURN		"-mfunction-return=thunk")
+try_c_flag(MINDIRECT_BRANCH		"-mindirect-branch=thunk")
+try_c_flag(FWRAPV			"-fwrapv")
+try_c_flag(FPIE				"-fPIE")
+try_linker_flag(PIE			"-pie")
+try_linker_flag(RETPOLINEPLT		"-Wl,-z,retpolineplt")
+try_linker_flag(ZRELRO			"-Wl,-z,relro")
+try_linker_flag(ZNOW			"-Wl,-z,now")
+try_linker_flag(ZNOEXECSTACK		"-Wl,-z,noexecstack")
 
 
 # Optimization flags
-IF(ENABLE_COVERAGE)
-	SET(CMAKE_C_OPT_FLAGS "-g -O0 -fno-strict-aliasing")
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
-	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
-ELSE()
-	IF(NOT CMAKE_C_OPT_FLAGS)
-		IF(ENABLE_FULL_DEBUG)
-			SET(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
-		ELSE()
-			SET(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
-		ENDIF()
-	ENDIF()
-ENDIF()
+if (ENABLE_COVERAGE)
+	set(CMAKE_C_OPT_FLAGS "-g -O0 -fno-strict-aliasing")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+else()
+	if (NOT CMAKE_C_OPT_FLAGS)
+		if (ENABLE_FULL_DEBUG)
+			set(CMAKE_C_OPT_FLAGS "-g -O0 -fstrict-aliasing")
+		else()
+			set(CMAKE_C_OPT_FLAGS "-g -O2 -fstrict-aliasing")
+		endif()
+	endif()
+endif()
 
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS}")
 # Silently strip whitespace
-STRING(STRIP "${CMAKE_C_FLAGS}" CMAKE_C_FLAGS)
-STRING(STRIP "${CMAKE_EXE_LINKER_FLAGS}" CMAKE_EXE_LINKER_FLAGS)
-STRING(STRIP "${CMAKE_MODULE_LINKER_FLAGS}" CMAKE_MODULE_LINKER_FLAGS)
-STRING(STRIP "${CMAKE_SHARED_LINKER_FLAGS}" CMAKE_SHARED_LINKER_FLAGS)
+string(STRIP "${CMAKE_C_FLAGS}" CMAKE_C_FLAGS)
+string(STRIP "${CMAKE_EXE_LINKER_FLAGS}" CMAKE_EXE_LINKER_FLAGS)
+string(STRIP "${CMAKE_MODULE_LINKER_FLAGS}" CMAKE_MODULE_LINKER_FLAGS)
+string(STRIP "${CMAKE_SHARED_LINKER_FLAGS}" CMAKE_SHARED_LINKER_FLAGS)
 
 
 # Check platform specific includes.
-#CHECK_INCLUDE_FILES(sys/types.h		HAVE_SYS_TYPES_H)
+#check_include_files(sys/types.h		HAVE_SYS_TYPES_H)
 
 # Check platform API.
-CHECK_FUNCTION_EXISTS(memset_s			HAVE_MEMSET_S)
-CHECK_FUNCTION_EXISTS(explicit_bzero		HAVE_EXPLICIT_BZERO)
-CHECK_FUNCTION_EXISTS(memrchr			HAVE_MEMRCHR)
-CHECK_FUNCTION_EXISTS(memmem			HAVE_MEMMEM)
-CHECK_FUNCTION_EXISTS(strncasecmp		HAVE_STRNCASECMP)
-CHECK_FUNCTION_EXISTS(reallocarray		HAVE_REALLOCARRAY)
-CHECK_FUNCTION_EXISTS(pipe2			HAVE_PIPE2)
-CHECK_FUNCTION_EXISTS(accept4			HAVE_ACCEPT4)
+check_function_exists(memset_s			HAVE_MEMSET_S)
+check_function_exists(explicit_bzero		HAVE_EXPLICIT_BZERO)
+check_function_exists(memrchr			HAVE_MEMRCHR)
+check_function_exists(memmem			HAVE_MEMMEM)
+check_function_exists(strncasecmp		HAVE_STRNCASECMP)
+check_function_exists(reallocarray		HAVE_REALLOCARRAY)
+check_function_exists(pipe2			HAVE_PIPE2)
+check_function_exists(accept4			HAVE_ACCEPT4)
 
 # Check macros.
-CHECK_SYMBOL_EXISTS(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
+check_symbol_exists(SOCK_NONBLOCK sys/socket.h	HAVE_SOCK_NONBLOCK)
 
-CONFIGURE_FILE(config.h.cmake src/config.h)
-ADD_DEFINITIONS(-DHAVE_CONFIG_H)
+configure_file(config.h.cmake src/config.h)
+add_definitions(-DHAVE_CONFIG_H)
 
 ################################ SUBDIRS SECTION #######################
 
-ADD_SUBDIRECTORY(src)
+add_subdirectory(src)
 
 ############################ TARGETS SECTION ###########################
 
-ADD_CUSTOM_TARGET(dist ${CMAKE_CURRENT_SOURCE_DIR}/dist.sh
+add_custom_target(dist ${CMAKE_CURRENT_SOURCE_DIR}/dist.sh
 	"${CMAKE_BINARY_DIR}/${PACKAGE_TARNAME}.tar.xz" "${TAR}"
 	COMMENT "Create source distribution"
 	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
@@ -249,21 +250,21 @@ ADD_CUSTOM_TARGET(dist ${CMAKE_CURRENT_SOURCE_DIR}/dist.sh
 ##################### INSTALLATION #####################################
 
 # Configs
-INSTALL(CODE "FILE(MAKE_DIRECTORY ${CONFDIR})")
+install(CODE "FILE(MAKE_DIRECTORY ${CONFDIR})")
 
-INSTALL_IF_NOT_EXISTS(ssdpd.conf ${CONFDIR} "ssdpd.conf" ".sample")
+install_if_not_exists(ssdpd.conf ${CONFDIR} "ssdpd.conf" ".sample")
 
-IF(CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
-	INSTALL_SCRIPT(freebsd/ssdpd "${CMAKE_INSTALL_PREFIX}/etc/rc.d/")
-ENDIF()
+if (CMAKE_SYSTEM_NAME MATCHES "^.*BSD$|DragonFly")
+	install_script(freebsd/ssdpd "${CMAKE_INSTALL_PREFIX}/etc/rc.d/")
+endif()
 
 # Install PHP UPnP/DLNA Media server
-IF(INSTALL_PHP_MEDIA_SERVER)
-	INSTALL(DIRECTORY "www/upnp" DESTINATION ${WWWDIR})
-	INSTALL(DIRECTORY DESTINATION "${WWWDIR}/upnpdata")
-	INSTALL_CONFIG("nginx/nginx-upnp-full.conf" ${CONFDIR})
-	INSTALL_CONFIG("nginx/nginx-upnp-server.conf" ${CONFDIR})
-	INSTALL_CONFIG("nginx/nginx-upnp-handler.conf" ${CONFDIR})
-	INSTALL_CONFIG("php/upnp-server.conf" "${CMAKE_INSTALL_PREFIX}/etc/php-fpm.d/")
-ENDIF()
+if (INSTALL_PHP_MEDIA_SERVER)
+	install(DIRECTORY "www/upnp" DESTINATION ${WWWDIR})
+	install(DIRECTORY DESTINATION "${WWWDIR}/upnpdata")
+	install_config("nginx/nginx-upnp-full.conf" ${CONFDIR})
+	install_config("nginx/nginx-upnp-server.conf" ${CONFDIR})
+	install_config("nginx/nginx-upnp-handler.conf" ${CONFDIR})
+	install_config("php/upnp-server.conf" "${CMAKE_INSTALL_PREFIX}/etc/php-fpm.d/")
+endif()
 
