--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,9 @@ try_c_flag(MFUNCTION_RETURN		"-mfunction-return=thunk")
 try_c_flag(MINDIRECT_BRANCH		"-mindirect-branch=thunk")
 try_c_flag(FWRAPV			"-fwrapv")
 try_c_flag(FPIE				"-fPIE")
-try_linker_flag(PIE			"-pie")
+if (C_FLAG_FPIE)
+	try_linker_flag(PIE		"-pie")
+endif()
 try_linker_flag(RETPOLINEPLT		"-Wl,-z,retpolineplt")
 try_linker_flag(ZRELRO			"-Wl,-z,relro")
 try_linker_flag(ZNOW			"-Wl,-z,now")
