--- a/ssdpd.conf
+++ b/ssdpd.conf
@@ -11,8 +11,9 @@
 	<skt>
 		<rcvBuf>64</rcvBuf>
 		<sndBuf>64</sndBuf>
-		<ttl>2</ttl>		<!-- For IPv4. -->
-		<hopLimit>2</hopLimit>	<!-- For IPv6. -->
+		<hopLimitUnicast>1</hopLimitUnicast> <!-- For unicast. -->
+		<hopLimitMulticast>1</hopLimitMulticast> <!-- For multicast. -->
+		<hopLimit>1</hopLimit> <!-- For unicast and multicast if ni specific values set. -->
 	</skt>
 
 	<fEnableIPv4>yes</fEnableIPv4>	<!-- Enable IPv4: 239.255.255.250:1900 -->
